--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -1,20 +1,22 @@
 
 .ajusteVista {
   display: flex;
-  background-color: rgb(36, 44, 53) !important;
+  background: linear-gradient(to top left, rgb(0, 23, 65),rgb(2, 22, 20) , rgb(2, 2, 20), rgb(2, 2, 20));
 }
 .userForm{
   background-color: #1c2631!important;
 }
-.navVista{
-  width: 18vw;
-}
+/* .navVista{
+  width: 15vw;
+} */
 .homeVista{
   display: flex;
   flex-direction: column;
-  width: 100%;
 }
 .carruselVista {
-  margin: 15px;
+  margin-top: 15px;
+  margin-bottom: 10px;
+  margin-left: 7.5px;
+  margin-right: 7.5px;
   display: flex;
 }
