--- a/src/components/CategoriasHome/categoriasHome.scss
+++ b/src/components/CategoriasHome/categoriasHome.scss
@@ -1,40 +1,57 @@
-.categoriasHouse{
+.categoriasHouse {
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: column;
+  .divisor {
     display: flex;
+    flex-direction: row;
+    justify-content: space-around;
     flex-wrap: wrap;
-    flex-direction: column;
-    .divisor{
-        display: flex;
-        flex-direction: row;
-        justify-content: space-around;
-        .imgCategorias{
-            padding: 5px;
-            display: flex;
-            flex-direction: column;
-            img{
-                width: 15vw;
-                border-radius: 500px;
-            }
-            h5{
-                color: gold;
-                text-align: center;
-            }
-        }
+    .imgCategorias {
+      margin: 5px;
+      padding: 5px;
+      display: flex;
+      flex-direction: column;
+      border-bottom: 1px solid rgba(255, 255, 255, 0.192);
+      img {
+        width: 250px;
+        border-radius: 500px;
+        padding: 5px;
+        border: 1px solid rgba(255, 255, 255, 0.192);
+        border-radius: 500px;
+      }
+      h5 {
+        color: rgba(255, 217, 0, 0.404);
+        text-align: center;
+      }
     }
-    .novedadesHome{
-        display: flex;
-        justify-content: space-around;
-        .miniEvento{
-            display: flex;
-            flex-direction: row;
-            border: solid 1px rgb(36, 44, 53);
-            box-shadow: 3px 3px 3px 3px;
-            width: 13%;
-            .iconoNovedad{
-                width: 80px;
-            }
-            h5{
-                color: gold;
-            }
-        }
+  }
+  .novedadesHome {
+    display: flex;
+    justify-content: space-around;
+    .miniEvento {
+      display: flex;
+      flex-direction: row;
+      border: solid 1px rgb(36, 44, 53);
+      width: 13%;
+      .iconoNovedad {
+        width: 80px;
+      }
+      h5 {
+        color: gold;
+      }
     }
+  }
+}
+@media (max-width: 900px) {
+    .categoriasHouse .divisor .imgCategorias img{
+    width: 200px;
+
+  }
+}
+@media (max-width: 700px) {
+    .categoriasHouse .divisor .imgCategorias img{
+    width: 170px;
+
+  }
 }
