--- a/src/components/MiniNav/miniNav.scss
+++ b/src/components/MiniNav/miniNav.scss
@@ -1,28 +1,34 @@
 .miniNavHouse{
     display: flex;
-    background-color: #132231;
+    background: linear-gradient(to top left, rgb(0, 23, 65),rgb(2, 22, 20) , rgb(2, 2, 20), rgb(2, 2, 20));
     justify-content: space-between;
     padding: 5px;
     z-index: 2;
     box-shadow: 5px 5px 5px rgba(255, 196, 0, 0.726);
+    width: 100%;
     form{
         margin: 1px;
         margin-top: 5px;
         input{
-            border: 1px solid gold;
+            border: 1.5px solid rgba(255, 217, 0, 0.253);
             background-color: transparent;
             color: whitesmoke;
             border-radius:8px ;
             width: 30vw;
+            transition: all 450ms;
         }
         button{
-            border: 1px solid gold;
+            border: 1px solid rgba(255, 217, 0, 0.253);
             background-color: transparent;
             color: whitesmoke;
             z-index: 2;
             border-radius: 8px ;
             position: relative;
             left: -27px;
+        }
+        input:hover{
+            border: 1.5px solid rgba(255, 217, 0, 0.527);
+
         }
 
     }
@@ -33,15 +39,28 @@
         h5{
             display: flex;
             align-items: center; 
-            color: aliceblue;
+            color:gray;
             margin-left: 1vw;
             margin-right: 1vw;
-            // margin-bottom: 0;
             margin-top: 0;
+            margin-bottom: 0;
+            transition: all 450ms;
         }
         .iconoHouse{
             width: 75px;
             border-radius: 500px;
         }
+        h5:hover{
+            border-top: 2px solid wheat;
+            // border-bottom: 2px solid white;
+            background-color: rgba(255, 255, 255, 0.014);
+            color: white;
+          }
     }
 }
+@media (max-width: 700px) {
+    .miniNavHouse .miniNavUsuarios .iconoHouse {
+        width: 10vw;
+    }
+}    
+
