--- a/src/components/Navbar/navBar.scss
+++ b/src/components/Navbar/navBar.scss
@@ -1,13 +1,13 @@
 .navHouse{
-  background-color: #132231;
-  height: 100vh;
+  background: linear-gradient(to top right, rgb(0, 23, 65),rgb(2, 22, 20) , rgb(2, 2, 20), rgb(2, 2, 20));
+  height: 100%;
   border-right:0.5px solid rgb(19, 19, 19) ;
   box-shadow: 5px 0px 5px rgba(255, 196, 0, 0.726);
   .logoHouse{
     margin: auto;
     margin-left: 2px;
     padding: 5px;
-    width: 17.5vw;
+    width: 15vw;
   }
   .listHouse{
     margin-top: 10px;
@@ -15,23 +15,23 @@
         padding: 0 0 0 0;
         text-decoration: none;
         h5{
-          color: whitesmoke;
+          color: gray;
           // text-align: center;
           margin: 5px 5px 10px 2vw;
           font-size: 25px;
         }
         li{
           text-align: center;
-          color:white;
+          color:gray;
           list-style:none;
           font-size: 20px;
           transition: 450ms;
         }
         li:hover{
-        border-right: 5px solid gold;
-        border-left: 5px solid gold;
-        background-color: rgb(27, 28, 36);
-        color: gold;
+        border-right: 5px solid wheat;
+        border-left: 5px solid white;
+        background-color: rgba(255, 255, 255, 0.014);
+        color: white;
       }
     }
   }
