--- a/src/components/CategoriasHome/categoriasHome.scss
+++ b/src/components/CategoriasHome/categoriasHome.scss
@@ -1,57 +1,16 @@
 .categoriasHouse {
   display: flex;
-  flex-wrap: wrap;
-  flex-direction: column;
-  .divisor {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around;
-    flex-wrap: wrap;
-    .imgCategorias {
-      margin: 5px;
-      padding: 5px;
-      display: flex;
-      flex-direction: column;
-      border-bottom: 1px solid rgba(255, 255, 255, 0.192);
-      img {
-        width: 250px;
-        border-radius: 500px;
-        padding: 5px;
-        border: 1px solid rgba(255, 255, 255, 0.192);
-        border-radius: 500px;
-      }
-      h5 {
-        color: rgba(255, 217, 0, 0.404);
-        text-align: center;
-      }
-    }
-  }
-  .novedadesHome {
-    display: flex;
-    justify-content: space-around;
-    .miniEvento {
-      display: flex;
-      flex-direction: row;
-      border: solid 1px rgb(36, 44, 53);
-      width: 13%;
-      .iconoNovedad {
-        width: 80px;
-      }
-      h5 {
-        color: gold;
-      }
-    }
-  }
+  width: 100vw;
+  height: 780px;
 }
-@media (max-width: 900px) {
-    .categoriasHouse .divisor .imgCategorias img{
-    width: 200px;
-
-  }
+.categoriasHouse img {
+  width: 0;
+  flex-grow: 1;
+  object-fit: cover;
+  opacity: 0.8;
+  transition: all 450ms;
 }
-@media (max-width: 700px) {
-    .categoriasHouse .divisor .imgCategorias img{
-    width: 170px;
-
-  }
+.categoriasHouse img:hover {
+  cursor: crosshair;
+  width: 300px;
 }
