--- a/src/components/Catalogo/catalogo.scss
+++ b/src/components/Catalogo/catalogo.scss
@@ -1,6 +1,108 @@
-.card{
+h1{
+  text-align: center;
+  color: orange;
+  width: 100%;
+  margin: 0;
+  border-top:1px solid orange ;
+  border-bottom:1px solid orange ;
+  padding: 0px;
+  padding-bottom:5px ;
+  background-color: black;
+}
+.catalogo {
+  background-color: #0e1114;
+  display: flex;
+  justify-content: center;
+  flex-direction: row;
+  flex-wrap: wrap;
+  width: 100vw;
+  .categorias {
     display: flex;
-    justify-content: center;
-    flex-direction: row;
-    flex-wrap: wrap;
+    flex-wrap: nowrap;
+    margin: 8px;
+    margin-right: 5px;
+    padding: 15px;
+    margin-bottom: 5px;
+    padding-bottom: 15px;
+    scroll-snap-type: x mandatory;
+    scroll-behavior: smooth;
+    overflow-x: auto;
+    overflow-y: hidden;
+    .bodyCard {
+      border-radius: 5px;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      margin: 5px;
+      border: 1px solid gold;
+      height: 100%;
+      transition: all 450ms;
+      img {
+        border-bottom: 1px solid gold;
+        width: 350px;
+        border-radius: 1px;
+      }
+      div {
+        display: flex;
+        justify-content: center;
+        flex-direction: column;
+        width: 100%;
+        height: 100%;
+        h5 {
+          text-align: center;
+          color: white;
+          border-bottom: 1px solid gold;
+          border-radius: 5px;
+          padding: 2px;
+          transition: all 450ms;
+        }
+        p {
+          text-align: center;
+          color: white;     
+          transition: all 450ms;
+        }
+        button {
+          display: flex;
+          align-items: flex-end;
+          justify-content: center;
+          background-color: transparent;
+          transition: all 450ms;
+          border-top: 1px solid gold;
+          a {
+            text-align: center;
+            color: white;
+            text-decoration: none;
+            transition: all 450ms;
+          }
+        }
+      }
+    }
+  }
+}
+.catalogo .categorias::-webkit-scrollbar {
+  background: #1e2731;
+}
+.catalogo .categorias::-webkit-scrollbar-thumb {
+  background: rgb(94, 94, 94);
+}
+
+.catalogo .categorias .bodyCard:hover {
+  background-color: rgb(0, 0, 0);
+  scale: 1.01;
+}
+.catalogo .categorias .bodyCard:hover div p{
+  color: gold;
+}
+.catalogo .categorias .bodyCard:hover div button{
+  scale: 1.01;
+  border-radius: 25px;
+  border: 1px solid orange;
+  width: 95%;
+  margin: auto;
+}
+.catalogo .categorias .bodyCard:hover div button a{
+  color: orange;
+}
+.catalogo .categorias .bodyCard:hover div h5{
+  color: orange;
 }
