--- a/src/components/Navbar/navBar.scss
+++ b/src/components/Navbar/navBar.scss
@@ -143,6 +143,10 @@ html::before {
     padding-right:12px ;
   }
   .contenedorNavHouse .navHouse .logoHouse{
-    width:50%;
+    width:90%;
+    text-align: center;
+  }
+  .contenedorNavHouse .navHouse .linkLogo{
+    text-align: center;
   }
 }
