--- a/src/components/Estadisticas/estadisticas.scss
+++ b/src/components/Estadisticas/estadisticas.scss
@@ -5,6 +5,7 @@
   .contenedorPaneles {
     width: 100%;
     display: flex;
+    justify-content: flex-start;
     margin: auto;
     background-color: black;
     border-bottom: 1px solid orange;
