--- a/src/components/Novedades/novedades.scss
+++ b/src/components/Novedades/novedades.scss
@@ -6,8 +6,50 @@
   scroll-behavior: smooth;
   overflow-x: auto;
   background-color: rgb(0, 0, 0);
+  padding-bottom: 10px;
   justify-content: space-around;
   .panelDatos {
+    width: 500px;
+    margin-left: 70px;
+    margin-right: 70px;
+    div {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      border: 1px solid orange;
+      margin-top: 10px;
+      margin-bottom: 10px;
+      width: 600px;
+      img {
+        width: 450px;
+        height: 300px;
+        object-fit: cover;
+        padding: 10px;
+        border: 0.5px solid rgb(0, 217, 255);
+      }
+      h2 {
+        color: white;
+        padding: 5px;
+        margin: 2px;
+      }
+      p {
+        margin-top: 5px;
+        font-size: large;
+        color: orange;
+      }
+    }
+  }
+}
+.contenedorNoticiasExtra {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  scroll-snap-type: x mandatory;
+  scroll-behavior: smooth;
+  overflow-x: auto;
+  background-color: rgb(0, 0, 0);
+  padding-bottom: 10px;
+  .panelDatosExtra {
     width: 500px;
     margin-left: 70px;
     margin-right: 70px;
@@ -76,6 +118,12 @@
   background: #1e2731;
 }
 .contenedorNoticias::-webkit-scrollbar-thumb {
+  background: rgb(94, 94, 94);
+}
+.contenedorNoticiasExtra::-webkit-scrollbar {
+  background: #1e2731;
+}
+.contenedorNoticiasExtra::-webkit-scrollbar-thumb {
   background: rgb(94, 94, 94);
 }
 @media (max-width: 1283px) {
